--- a/src/components/header/header-style.scss
+++ b/src/components/header/header-style.scss
@@ -39,15 +39,15 @@ ul {
 }
 
 li {
-  height: 30px;
-
   text-align: center;
   font-size: 18px;
   font-weight: normal;
 
   margin: 25px;
-  padding-right: 20px;
-  padding-left: 20px;
+
+  display: inline-block;
+  line-height: normal;
+  vertical-align: middle;
 
 
   font-family: 'Josefin Sans', sans-serif;
