--- a/src/forms/form-style.scss
+++ b/src/forms/form-style.scss
@@ -1,7 +1,4 @@
-
-
 form {
-
   width: 75%;
 
   position: relative;
@@ -114,10 +111,18 @@ input::-webkit-input-placeholder {
   color: #EBEDF1;
   font-weight: bold;
   font-family: 'Josefin Sans', sans-serif;
-
 }
 
-:focus{
+button {
+  &:hover {
+    -moz-box-shadow: 0px 0px 4px 1px #4D98F0;
+    -webkit-box-shadow: 0px 0px 4px 1px #4D98F0;
+    box-shadow: 0px 0px 4px 1px #4D98F0;
+    transition: border 300ms ease-in-out;
+  }
+}
+
+:focus {
   color: #4D98F0;
   outline: none;
 }
