--- a/src/components/messages/successMessage/successMessage-style.scss
+++ b/src/components/messages/successMessage/successMessage-style.scss
@@ -1,4 +1,4 @@
-.exceptionWrapper {
+.successWrapper {
   display: flex;
 
   font-size: x-small;
@@ -8,32 +8,32 @@
   margin: auto;
   padding: 5px;
 
-  border: darkred 2px solid;
+  border: #008c09 2px solid;
   border-radius: 5px;
 
 
-  background-color: #ffebeb;
+  background-color: #f9ffeb;
 }
 
-.exceptionMessageWrapper {
+.successMessageWrapper {
 
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.exceptionMessage {
-  color: darkred;
+.successMessage {
+  color: #008c09;
 }
 
-.exceptionMessageButtonWrapper {
+.successMessageButtonWrapper {
   width: 50%;
   display: flex;
   justify-content: right;
   margin: 5px;
 }
 
-.exceptionMessageButton {
+.successMessageButton {
   font-family: 'Josefin Sans', sans-serif;
 
   width: 4vw;
@@ -41,15 +41,15 @@
   font-size: xx-small;
   margin: auto 0 auto 5px;
 
-  color: #EBEDF1;
+  color: #f9ffeb;
 
-  background-color: darkred;
+  background-color: #008c09;
 
   border: none;
   border-radius: 5px;
 
-  -moz-box-shadow: 0px 0px 4px 1px darkred;
-  -webkit-box-shadow: 0px 0px 4px 1px darkred;
-  box-shadow: 0px 0px 4px 1px darkred;
+  -moz-box-shadow: 0px 0px 4px 1px #008c09;
+  -webkit-box-shadow: 0px 0px 4px 1px #008c09;
+  box-shadow: 0px 0px 4px 1px #008c09;
   transition: border 300ms ease-in-out;
 }
